padding fix on mobile

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -100,6 +100,7 @@
   .hero-text-box,
   .hero-img-box {
     text-align: center;
+    justify-content: center;
   }
   .delivered-meals {
     justify-content: center;
@@ -116,6 +117,11 @@
     padding: 0 3.2rem;
   }
   .hero-img {
+    padding: 0;
     width: 80%;
+  }
+  .hero-img-box {
+    text-align: center;
+    justify-content: center;
   }
 }
